--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         <h3>Основная задача проекта отточить навыки использования тегов HTML</h3>
         <p>Структура реализована при помощи перемещения по индексам.</p>
         <p>Испорльзование прогресс баров, музыки, кнопок и тайпингов.</p>
-        <p>JS - не являлся основной задачей проекта и был реализован для финальной части игры при помощи ИИ.</p>
+        <p>JS - не являлся основной задачей проекта и был реализован для финальной части игры.</p>
         <p>Спасибо за игру!</p>
     </footer>
     <script>
