spelling errors corrected

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         
          <div id="body1">
             <h2>💀 ТЕЛО УЧЕНОГО</h2>
-            <p>Вы находите тело мужчины с лаболаторном халате. На груди - бейдж.</p>
+            <p>Вы находите тело мужчины в лаболаторном халате. На груди - бейдж.</p>
 
         <h3>Действия:</h3>
         <ul>
