--- a/secret_room.html
+++ b/secret_room.html
@@ -8,7 +8,15 @@
     <h1>Секретная комната управления</h1>
     
     <h2>Системное сообщение:</h2>
-    <p>После входа в систему двери заблокированы.</p>
+    <pre>
+        ___________________________
+       | ________________________ x|
+       |    Двери заблокированы.   |
+       |                           |
+        ---------------------------
+    </pre>
+
+
     <p>Из соседней комнаты доносится шорох. Там открылись двери.</p>
     <p>Раз я не могу выбраться отсюда, нельзя допустить, чтобы это создание вырвалось наружу. Остается только один выход.</p>
     
